TRIAGE-3987 Change groupId and class package